--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -14,6 +14,7 @@
 %c_2e3c54 { color: #2e3c54; }
 %c_2d9ae0 { color: #2d9ae0; }
 %c_2e3c54 { color: #2e3c54; }
+%c_33a72c { color: #33a72c; }
 %c_53aae2 { color: #53aae2; }
 %c_697f9a { color: #697f9a; }
 %c_70a3c4 { color: #70a3c4; }
@@ -22,6 +23,7 @@
 %c_8093a9 { color: #8093a9; }
 %c_8e95a1 { color: #8e95a1; }
 %c_96a5b8 { color: #96a5b8; }
+%c_aab1ba { color: #aab1ba; }
 %c_b8b8b8 { color: #b8b8b8; }
 %c_ccd3d7 { color: #ccd3d7; }
 %c_fff { color: #fff; }
@@ -45,6 +47,7 @@
 %font_37 { font-size: 37px; }
 %font_48 { font-size: 48px; }
 
+%normal { font-weight: normal; }
 %bold { font-weight: bold; }
 %italic { font-style: italic; }
 
@@ -101,3 +104,4 @@
 /*font family*/
 %pt_sans_narrow_bold { font-family: 'ptsans-narrow-bold', sans-serif; }
 %pt_sans_narrow_regular { font-family: 'ptsans-narrow-regular', sans-serif; }
+%arial { font-family: arial, sans-serif; }
