--- a/themes/perevozkin/sass/screen.scss
+++ b/themes/perevozkin/sass/screen.scss
@@ -44,8 +44,11 @@ $ico-sprite-dimensions: true;
 @import "_statistic-block";
 @import "_benefits-block";
 @import "_requests-list";
+@import "_requests1-list"; 
 @import "_last-requests";
 @import "_radnom-reviews";
+@import "_my-menu";
+@import "_my-page";
 
 
 @import "_header";
