--- a/themes/perevozkin/sass/screen.scss
+++ b/themes/perevozkin/sass/screen.scss
@@ -49,6 +49,8 @@ $ico-sprite-dimensions: true;
 @import "_radnom-reviews";
 @import "_my-menu";
 @import "_my-page";
+@import "_my-top-menu";
+@import "_my-contact-info";
 
 
 @import "_header";
