--- a/themes/perevozkin/sass/_my-page.scss
+++ b/themes/perevozkin/sass/_my-page.scss
@@ -29,3 +29,144 @@
 		@extend %font_14;
 	}
 }
+
+.my-rating-stars {
+	width: 134px;
+	height: 24px;
+	
+	@extend %pos_rel;
+}
+
+.my-rating-stars-empty {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: url(../images/star-empty-big.png) repeat-x;
+	z-index: 1;
+	
+	@extend %db;
+	@extend %pos_abs;
+	
+}
+
+.my-rating-stars-full {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: url(../images/star-full-blue-big.png) repeat-x;
+	z-index: 2;
+	width: 70%;
+	
+	@extend %db;
+	@extend %pos_abs;
+	
+}
+
+
+.my-rating-container {
+	height: 126px;
+	padding: 22px;
+	background: url(../images/rating-bg.jpg) no-repeat top center;
+	
+	.my-rating {
+		margin: 0 0 15px 0;
+		
+		@extend %bold;
+		@extend %font_20;
+		@extend %c_fff;
+		@extend %pos_rel;
+		
+		.my-rating-stars {
+			top: 0;
+			right: 5px;
+
+			@extend %pos_abs;
+		}	
+		
+	}
+	
+}
+
+.my-rating-info {
+	& > div {
+		width: 90px;
+		
+		@extend %fl;
+		@extend %c_fff;
+		
+		& > span {
+			padding: 5px 0 0 0;
+			
+			@extend %db;
+			@extend %bold;
+			@extend %font_22;
+		}
+	}
+}
+
+.my-rating-info-block1 {
+
+}
+
+.my-rating-age {
+	margin: 12px 0 0 0;
+	
+	@extend %c_fff;
+	@extend %font_14;
+	
+	span {
+		@extend %bold;
+	}
+	
+}
+
+.my-rating-info-block2 {
+	margin: 0 0 0 40px;
+}
+
+.my-rewiews {
+	padding: 15px 18px;
+	border: 1px solid #b2daeb;
+	border-top: none;
+}
+
+.my-rewiews-head {
+	border-bottom: 1px solid #b2daeb;
+	padding: 0 0 15px 0;
+	margin: 0 0 15px 0;
+	
+	@extend %font_14;
+	@extend %bold;
+	@extend %text_c;
+	@extend %c_2e3c54;
+	
+	
+}
+
+.my-rewiews-table {
+	@extend %w_100;
+	
+	td {
+		padding: 6px 0;
+		
+		@extend %text_c;
+	}
+	
+	.head {
+		@extend %font_12;
+		@extend %c_2e3c54;
+	}
+	
+	.good {
+		@extend %font_14;
+		@extend %bold;
+		@extend %c_33a72c;
+	}
+	
+	.bad {
+		@extend %font_14;
+		@extend %c_eb4c4c;
+	}
+}
