--- a/themes/perevozkin/sass/_common.scss
+++ b/themes/perevozkin/sass/_common.scss
@@ -22,7 +22,7 @@
 body {
 	font-family: Arial, sans-serif;
 	font-weight: normal;
-	font-size: 12px;
+	font-size: 14px;
 
 	@extend %c_2e3c54;
 }
@@ -42,10 +42,17 @@ input[type="password"],
 .inputbox,
 textarea {
 	border: 1px solid #c5d2e3;
-	padding: 2px 15px;
+	padding: 4px 15px;
+	
+	@include border-radius(3px);
+	
+	
+	@extend %font_14;
+	@extend %c_2e3c54;
 	
 	&:focus {
 		border-color: #96a7bd;
+		@include box-shadow(0px 0px 1px 1px #96a7bd);
 	}
 	
 	&.error {
