--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -17,6 +17,7 @@
 %c_33a72c { color: #33a72c; }
 %c_53aae2 { color: #53aae2; }
 %c_61a40a { color: #61a40a; }
+%c_62e3ff { color: #62e3ff; }
 %c_697f9a { color: #697f9a; }
 %c_70a3c4 { color: #70a3c4; }
 %c_71a72c { color: #71a72c; }
