--- a/themes/perevozkin/sass/screen.scss
+++ b/themes/perevozkin/sass/screen.scss
@@ -63,6 +63,7 @@ $btns-layout: vertical;
 @import "_my-transport";
 @import "_my-requests";
 @import "_add-bid-form";
+@import "_bids-filter";
 
 
 @import "_header";
