--- a/themes/perevozkin/sass/screen.scss
+++ b/themes/perevozkin/sass/screen.scss
@@ -64,6 +64,7 @@ $btns-layout: vertical;
 @import "_my-requests";
 @import "_add-bid-form";
 @import "_bids-filter";
+@import "_bid-item-detail";
 
 
 @import "_header";
