--- a/themes/perevozkin/sass/_placeholders.scss
+++ b/themes/perevozkin/sass/_placeholders.scss
@@ -31,6 +31,7 @@
 %c_ccd3d7 { color: #ccd3d7; }
 %c_eb4c4c { color: #eb4c4c; }
 %c_de5151 { color: #de5151; }
+%c_ffa100 { color: #ffa100; }
 %c_fff { color: #fff; }
 
 %font_10 { font-size: 10px; }
