--- a/themes/perevozkin/sass/screen.scss
+++ b/themes/perevozkin/sass/screen.scss
@@ -65,6 +65,7 @@ $btns-layout: vertical;
 @import "_add-bid-form";
 @import "_bids-filter";
 @import "_bid-item-detail";
+@import "_kak-rabotaet-sait";
 
 
 @import "_header";
